nginx/web_code/stylesheets/default.css
/* ... */
a {
    text-decoration: none;
}

ul {
    list-style-type: none;
    padding-left: 10px;
}

ul a {
    color: black;
}

.dark-mode ul a {
    color: white;
}

.fa {
    font-size: 24px;
}

.material-icons {
    vertical-align: middle;
}

.strong {
    font-weight: bold;
}

.italic {
    font-style: italic;
}

/* Some shared style between the navbar and footer */
.banner {
    z-index: 10;
    background-color: var(--navbar-bg-colour);
    position: fixed;
    width: 100%;
    display: flex;
    justify-content: space-between;
    color: rgb(242, 242, 242);
    font-family: "Roboto Condensed", arial, monospace;
    font-size: 1.5rem;
}

.footer.banner {
    bottom: 0;
    position: relative;
    font-size: 1rem;
    display: inline-block;
    text-align: center;
}

/* For the hamburger transform into an X. Credit: https://codepen.io/ainalem/pen/PoYvggj*/
svg {
    position: absolute;
    top: -2px;
    right: 0;
    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
}
.active svg {
    transform: rotate(90deg);
}
path {
    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1),
      stroke-dasharray 500ms cubic-bezier(0.4, 0, 0.2, 1),
      stroke-dashoffset 500ms cubic-bezier(0.4, 0, 0.2, 1);
}
path:nth-child(1) {
    transform-origin: 36% 40%;
}
path:nth-child(2) {
    stroke-dasharray: 29 299;
}
path:nth-child(3) {
    transform-origin: 35% 63%;
}
path:nth-child(4) {
    stroke-dasharray: 29 299;
}
path:nth-child(5) {
    transform-origin: 61% 52%;
}
path:nth-child(6) {
    transform-origin: 62% 52%;
}
.active path:nth-child(1) {
    transform: translateX(9px) translateY(1px) rotate(45deg);
}
.active path:nth-child(2) {
    stroke-dasharray: 225 299;
    stroke-dashoffset: -72px;
}
.active path:nth-child(3) {
    transform: translateX(9px) translateY(1px) rotate(-45deg);
}
.active path:nth-child(4) {
    stroke-dasharray: 225 299;
    stroke-dashoffset: -72px;
}
.active path:nth-child(5) {
    transform: translateX(9px) translateY(1px) rotate(-45deg);
}
.active path:nth-child(6) {
    transform: translateX(9px) translateY(1px) rotate(45deg);
}

/* Navigation bar*/
.navbar.banner {
    top: 0;
}

.navbar a:hover {
    background: white;
    color: var(--navbar-bg-colour);
}

.navbar a {
    display: block;
    color: rgb(242, 242, 242);
    padding: 10px;
    letter-spacing: -0.01562em;
}

.navbar-left {
    display: flex;
}

.navbar-right {
    display: none;
    font-weight: bold;
    font-size: 1.5rem;
    margin-top: 50px;
    background-color: var(--navbar-bg-colour);
    width: 100%;
    position: absolute;
    left: 0;
    padding-bottom: 15px;
    text-align: center;
}

/* Hide the scroll bar for the language select in some browsers*/
select {
    overflow-y: auto;
    display: block;
    margin: 0 auto;
}

.lang-navbar {
    width: 100%;
    word-spacing: -0.1em;
}

#language-select {
    appearance: none;
    -webkit-appearance: none;
    font-family: 'Roboto Condensed', arial, monospace;
    font-size: 1.5rem;
    font-weight: bold;
    position: relative;
    background-color: var(--navbar-bg-colour);
    color: white;
    cursor: pointer;
}

#language-select option:hover {
    background-color: white;
    color: var(--navbar-bg-colour);
}

/* Dark mode */
.dark-mode {
    background-color: var(--dark-mode-dark-colour);
    color: white;
}

.switch {
    position: relative;
    display: inline-block;
    width: 90px;
    height: 50px;
    left: -10px;
}
  
.switch input { 
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 10px;
    left: 10px;
    right: 0;
    bottom: 0;
    background-color: rgb(204, 204, 204);
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: '';
    height: 50px;
    width: 50px;
    left: -2px;
    bottom: -5px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
    content: '✹';
    color: black;
    display: flex;
    justify-content: center;
    align-items: center;
}

input:checked + .slider {
    background-color: rgb(107, 107, 107);
}
  
input:focus + .slider {
    box-shadow: 0 0 1px rgb(107, 107, 107);
}
  
input:checked + .slider:before {
    -webkit-transform: translateX(32px);
    -ms-transform: translateX(32px);
    transform: translateX(32px);
    background-color: rgb(40, 40, 40);
    content: '☾';
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
}

.slider.round {
    border-radius: 34px;
}
  
.slider.round:before {
    border-radius: 50%;
}

/* Video */
.video-background {
    width: 100%;
    height: 100%;
    object-fit: cover;
    position: absolute;
    top: 0;
    left: 0;
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
    overflow: hidden;
    align-items: center;
    display: flex;
    justify-content: center;
}

.dark-background{
    background-color: rgba(45, 49, 53, 0.75);
}

/* Content */
.profile-overview.content-box {
    position: relative;
    width: 100%;
    height: 679px;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
}

.content {
    position: relative;
    flex: 1 0 auto;
    font-size: 1rem;
    font-family: 'Roboto Condensed', arial, monospace;
    flex: 1;
    margin-top: 48px;
    overflow: hidden;
}

.section-heading {
    font-size: 3rem;
    margin: 0px 0px 0.35em;
    text-align: center;
    font-weight: 400;
    line-height: 1.167;
    letter-spacing: 0em;
}

.section-text{
    font-size: 1rem;
    box-sizing: border-box;
}

.content-inner {
    width: 100%;
    margin: 0px auto;
    display: block;
}

.content-box {
    padding: 0px 5px;
    width: 97%;
    height: 100%;
}

.content-left{
    float: left;
}

.content-right{
    float: right;
}

.lang {
    width: 100%;
}
/* ... */

